--- a/front-end/src/app/app.component.scss
+++ b/front-end/src/app/app.component.scss
@@ -1,10 +1,13 @@
 ::ng-deep {
   .ant-input-number-input,
-  .ant-input {
+  .ant-input, .ant-btn, .ant-select-selector {
     height: 40px !important;
   }
 
   .ant-input {
     padding-bottom: 2px !important;
+  }
+  .ant-select-single .ant-select-selector .ant-select-selection-item {
+    line-height: 40px !important;
   }
 }
