Refactor home component HTML and TypeScript files

--- a/front-end/src/app/components/home/home.component.html
+++ b/front-end/src/app/components/home/home.component.html
@@ -1,10 +1,10 @@
 <div class="container">
-  <img
+  <!-- <img
     src="https://media1.tenor.com/m/CkrY3ESk_ecAAAAC/tuannguyen12-travis.gif"
     class="mb-3"
   />
 
-  <h2 class="text-center">Ăn Gà v1.0</h2>
+  <h2 class="text-center">Ăn Gà v1.0</h2> -->
 
   <form [formGroup]="form">
     <nz-row [nzGutter]="[8, 8]">
@@ -79,3 +79,4 @@
     </nz-row>
   </form>
 </div>
+<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-scale-multiple" [fullScreen] = "true"><p style="color: white" > Đang nấu gà... </p></ngx-spinner>
