chore: Add delete sheet functionality and confirm dialog in home component

--- a/front-end/src/app/components/home/home.component.html
+++ b/front-end/src/app/components/home/home.component.html
@@ -56,7 +56,7 @@
         </nz-select>
       </nz-col>
       <nz-col nzSpan="3">
-        <button nz-button class="w-100" nzDanger (click)="deleteSheet()"><span nzDanger nz-icon nzType="delete"></span></button>
+        <button nz-button class="w-100" nzDanger (click)="confirmDelete()"><span nzDanger nz-icon nzType="delete"></span></button>
          </nz-col>
       <nz-col nzSpan="9">
         <button class="w-100" nz-button (click)="createSheet()">
