--- a/front-end/src/app/components/menu/menu.component.html
+++ b/front-end/src/app/components/menu/menu.component.html
@@ -1,10 +1,6 @@
 <div class="container">
-  <!-- <img
-    src="https://media1.tenor.com/m/CkrY3ESk_ecAAAAC/tuannguyen12-travis.gif"
-    class="mb-3"
-  /> -->
-
-  <h2 class="text-center">Ăn gà v1.0</h2>
+  <!-- <img src="/assets/img/mck.jpg" class="mb-3"> -->
+  <!-- <h2 class="text-center">Ăn gà v1.0</h2> -->
   <nz-row
     [nzGutter]="[16, 16]"
     [nzJustify]="'space-between'"
@@ -37,12 +33,13 @@
     </nz-col>
     <nz-col nzSpan="24">
       <button
-        [disabled]="true"
+        [disabled]="!isAuth"
         nz-button
         class="w-100"
         nzType="primary"
         [nzSize]="'large'"
         nzShape="round"
+        (click)="openRankings()"
       >
         Bảng xếp hạng
       </button>
