chore: Refactor home component, update API URL, and add delete sheet functionality

--- a/front-end/src/app/components/home/home.component.html
+++ b/front-end/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <!-- <img src="/assets/img/mck.jpg" class="mb-3" /> -->
+  <img src="/assets/img/mck.jpg" class="mb-3" />
   <form [formGroup]="form">
     <nz-row [nzGutter]="[8, 8]">
       <nz-col nzSpan="24">
