--- a/front-end/src/app/components/menu/menu.component.html
+++ b/front-end/src/app/components/menu/menu.component.html
@@ -1,11 +1,24 @@
 <div class="container">
-  <!-- <img src="/assets/img/mck.jpg" class="mb-3"> -->
-  <!-- <h2 class="text-center">Ăn gà v1.0</h2> -->
+  <img src="/assets/img/mck.jpg" class="mb-3">
+  <h2 class="text-center">Ăn gà v1.0</h2>
   <nz-row
     [nzGutter]="[16, 16]"
     [nzJustify]="'space-between'"
     [nzAlign]="'middle'"
   >
+  <nz-col nzSpan="24">
+    <button
+      nz-button
+      class="w-100"
+      nzType="primary"
+      [nzSize]="'large'"
+      nzShape="round"
+      (click)="redirectToAuthUrl()"
+      [disabled]="isAuth"
+    >
+      Xác thực tài khoản
+    </button>
+  </nz-col>
     <nz-col nzSpan="24">
       <button
         nz-button
