Refactor home component, update image max-width, and add missing styles

--- a/front-end/src/app/components/player-entry/player-entry.component.html
+++ b/front-end/src/app/components/player-entry/player-entry.component.html
@@ -9,8 +9,8 @@
   >
     <thead>
       <tr>
-        <th [nzWidth]="'250px'">Tên</th>
-        <th>Tham gia</th>
+        <th >Tên</th>
+        <th [nzWidth]="'100px'">Tham gia</th>
       </tr>
     </thead>
     <tbody>
