--- a/front-end/src/app/components/menu/menu.component.html
+++ b/front-end/src/app/components/menu/menu.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <img src="/assets/img/mck.jpg" class="mb-3 mck">
+  <img src="/assets/img/mck.jpg" class="mb-3" style="max-width: 500px;" />
   <h2 class="text-center">Ăn gà v1.0</h2>
   <nz-row
     [nzGutter]="[16, 16]"
