--- a/front-end/src/app/components/result/result.component.html
+++ b/front-end/src/app/components/result/result.component.html
@@ -41,6 +41,7 @@
         [nzSize]="'large'"
         nz-button
         nzType="primary"
+        [disabled]="!isAuth"
         (click)="refresh()"
       >
         Làm mới
