Refactor code to use environment variable for token storage

--- a/front-end/src/app/components/score-entry/score-entry.component.html
+++ b/front-end/src/app/components/score-entry/score-entry.component.html
@@ -93,7 +93,7 @@
         nzType="primary"
         (click)="finishGame()"
       >
-        Đứng dậy đi về
+        Tổng kết
       </button>
     </nz-col>
   </nz-row>
