Refactor code to handle 403 error when user doesn't have permission

--- a/front-end/src/app/components/result/result.component.html
+++ b/front-end/src/app/components/result/result.component.html
@@ -59,6 +59,17 @@
         Cập nhật vào bảng xếp hạng
       </button>
     </nz-col>
+    <nz-col nzSpan="24">
+      <button
+        class="w-100"
+        [nzSize]="'large'"
+        nz-button
+        nzType="primary"
+        (click)="backToMenu()"
+      >
+        Trang chủ
+      </button>
+    </nz-col>
   </nz-row>
 </div>
 
