--- a/front-end/src/app/components/menu/menu.component.html
+++ b/front-end/src/app/components/menu/menu.component.html
@@ -1,24 +1,38 @@
 <div class="container">
-  <img src="/assets/img/mck.jpg" class="mb-3" style="max-width: 500px;" />
+  <img src="/assets/img/mck.jpg" class="mb-3" style="max-width: 500px" />
   <h2 class="text-center">Ăn gà v1.0</h2>
   <nz-row
     [nzGutter]="[16, 16]"
     [nzJustify]="'space-between'"
     [nzAlign]="'middle'"
   >
-  <nz-col nzSpan="24">
-    <a
-      nz-button
-      class="w-100"
-      nzType="primary"
-      [nzSize]="'large'"
-      nzShape="round"
-      (click)="redirectToAuthUrl()"
-      [disabled]="isAuth"
-    >
-      Xác thực tài khoản
-  </a>
-  </nz-col>
+    <nz-col nzSpan="24">
+      <button
+        nz-button
+        class="w-100"
+        nzType="primary"
+        [nzSize]="'large'"
+        nzShape="round"
+        (click)="redirectToAuthUrl()"
+        [disabled]="isAuth"
+      >
+        Xác thực tài khoản
+      </button>
+    </nz-col>
+    <nz-col nzSpan="24">
+      <button
+        nz-button
+        class="w-100"
+        nzType="primary"
+        [nzSize]="'large'"
+        nzShape="round"
+        nzDanger
+        (click)="logOut()"
+        [disabled]="!isAuth"
+      >
+        Đăng xuất
+      </button>
+    </nz-col>
     <nz-col nzSpan="24">
       <button
         nz-button
@@ -81,8 +95,15 @@
         (click)="openSheetLink()"
       >
         Mở sheet
-    </a>
+      </a>
     </nz-col>
   </nz-row>
 </div>
-<ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-scale-multiple" [fullScreen] = "true"><p style="color: white" > Đang nấu gà... </p></ngx-spinner>
+<ngx-spinner
+  bdColor="rgba(0, 0, 0, 0.8)"
+  size="medium"
+  color="#fff"
+  type="ball-scale-multiple"
+  [fullScreen]="true"
+  ><p style="color: white">Đang nấu gà...</p></ngx-spinner
+>
